--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,9 @@ find_package(catkin REQUIRED COMPONENTS
 
 find_package(OpenCV)
 find_package(Boost REQUIRED)
-find_package(OpenCL REQUIRED)
-include_directories(${OpenCL_INCLUDE_DIRS})
-link_directories(${OpenCL_LIBRARY})
+#find_package(OpenCL REQUIRED)
+#include_directories(${OpenCL_INCLUDE_DIRS})
+#link_directories(${OpenCL_LIBRARY})
 
 generate_dynamic_reconfigure_options(
   cfg/VoxelGridFilter.cfg
@@ -47,10 +47,10 @@ include_directories(
 )
 
 add_library(${PROJECT_NAME}
-  src/depth_image_to_pcl.cpp
-  src/ocl_library_wrapper.cpp
+  #src/depth_image_to_pcl.cpp
+  #src/ocl_library_wrapper.cpp
   src/nodelets/median_filter.cpp
-  src/nodelets/point_cloud_xyz.cpp
+  #src/nodelets/point_cloud_xyz.cpp
   src/nodelets/voxel_grid_filter.cpp
   src/nodelets/point_cloud_to_laserscan.cpp
   )
@@ -59,7 +59,7 @@ add_library(${PROJECT_NAME}
 add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_gencfg)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${opencv_LIBRARIES} ${PCL_LIBRARIES} ${OpenCL_LIBRARY})
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${opencv_LIBRARIES} ${PCL_LIBRARIES})
 
 #############
 ## Install ##
@@ -77,8 +77,8 @@ install(FILES nodelet_plugins.xml
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-install(DIRECTORY plugins
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+#install(DIRECTORY plugins
+#        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
 install(DIRECTORY launch
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
